# robosense_sdk

auto_align_tool/: CMakeLists.txt  README.md  package.xml
auto_align_tool/include/: mainwindow.h
auto_align_tool/launch/: lidar_calibration.launch
auto_align_tool/node/: adjust_node.cpp
auto_align_tool/save_config/: align.txt
auto_align_tool/src/: mainwindow.cpp
play_tool/control_tool/: CMakeLists.txt
play_tool/control_tool/cfg/: demo.rviz
play_tool/control_tool/include/: mainwindow.h
play_tool/control_tool/node/: save_pcd_node.cpp
play_tool/control_tool/src/: mainwindow.cpp
play_tool/control_tool/ui/: mainwindow.ui  ui_mainwindow.h  untitled.ui
play_tool/ros_rslidar/rslidar_driver/src/: rsdriver.cpp  rslidar_node.cpp
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_16/: angle.csv  curves.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_16/old/: ChannelNum.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_32/B02/: ChannelNum.csv  CurveRate.csv  angle.csv  curves.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_32/B16/: ChannelNum.csv  CurveRate.csv  limit.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_32/B18/: angle.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_32/B19/: ChannelNum.csv  CurveRate.csv  angle.csv  curves.csv  limit.csv
play_tool/ros_rslidar/rslidar_pointcloud/data/rs_lidar_32/B27/: ChannelNum.csv  ChannelNum_realtime.csv  CurveRate.csv  angle.csv  curves.csv  lidar.yaml  limits.csv
play_tool/ros_rslidar/rslidar_pointcloud/launch/: cloud_nodelet.launch  rs_lidar_16.launch  rs_lidar_32.launch  rs_lidar_32_cut_angle.launch  two_lidar.launch
play_tool/ros_rslidar/rslidar_pointcloud/src/: convert.cc
rs_fusion_release-master/: CHANGELOG  CMakeLists.txt  README.md  package.xml
rs_fusion_release-master/ReleaseDoc/: ros-kinetic-rs-fusion_1.1.1-0xenial_amd64.deb  rs_fusion_v1.1.1_交付件清单.xls  rs_fusion_v1.1.1_版本描述文件.docx  rs_fusion_v1.1.1_研发自测试报告.docx
rs_fusion_release-master/config/: rs_fusion.yaml  trans_params_0.yaml  trans_params_1.yaml  trans_params_2.yaml
rs_fusion_release-master/launch/: fusion.launch  rs_fusion_show.launch
rs_fusion_release-master/rviz/: rs_fusion.rviz
rs_perception/: CMakeLists.txt  data  package.xml
rs_perception/cfg/: robosense_map_test.rviz  robosense_map_test_cainiao.rviz  robosense_no_map_test.rviz
rs_perception/demo/: p3_test_with_map.cpp  p3_test_without_map.cpp  test_receiver.cpp  test_with_map.cpp  test_without_map.cpp
rs_perception/include/rs_perception/classification/: classifier0.h  classifier1.h  classifierBase0.h  classifyCommon.h  feature_descriptor.h
rs_perception/include/rs_perception/common/base/: basic_types.h  configuration_type.h  geo_base.h  object.h  robo_math.h
rs_perception/include/rs_perception/common/box/: box_builder.h  box_wrapper.h
rs_perception/include/rs_perception/common/geometry/: ego_motion_comp.h  ground_initializer.h  map_free_space.h  multiLidarMerger.h  transformer.h
rs_perception/include/rs_perception/detection/: detector.h
rs_perception/include/rs_perception/detection/ground_estimator/: ground_estimator.h
rs_perception/include/rs_perception/detection/segmenter/: segmenter.h
rs_perception/include/rs_perception/module_manager/: module_manager.h
rs_perception/include/rs_perception/preprocessing/: preprocessing.h
rs_perception/include/rs_perception/preprocessing/odometry/: ndt_odometry.h
rs_perception/include/rs_perception/robosense/: robosense.h
rs_perception/include/rs_perception/tracking/: track_object.h  tracker.h
rs_perception/key/: RobosensePerceptionKey.key
rs_perception/launch/: 16_with_map.launch  16_without_map.launch  32_with_map.launch  32_without_map.launch  32_without_map_pcap.launch  p3_with_map.launch  p3_without_map.launch  play.launch  rs_fusion_tsintel.launch  test.launch  tsintel.launch
rs_perception/msg/: PerceptionListMsg.msg  PerceptionMsg.msg
rs_perception/multi_lidar/cainiao/: trans_params_0.xml  trans_params_1.xml
rs_perception/multi_lidar/gyy/: trans_params_0.xml  trans_params_1.xml
rs_perception/proto/: perceptron.pb.cc  perceptron.pb.h  perceptron.proto
rs_perception/tools/communication/: comm_util.hpp  communication.cpp  communication.h  communication2.cpp  communication2.h
rs_perception/tools/display/: robo_draw_rviz.cpp  robo_draw_rviz.h
rs_perception/tools/ros_message/: gen_ros_msgs.hpp
rs_perception/tools/util/: robosense_util.cpp  robosense_util.h
rs_perception/usr_args/: align.txt  perception_args_16.xml  perception_args_32.xml  perception_args_fuse.xml
rs_perception/usr_args/localization/: parameters.xml  parameters_old.xml
